# routing-server

./: .gitignore  CMakeLists.txt  README.md
.ipynb_checkpoints/: reproduce_issue-checkpoint.ipynb
config/: server_config.json
include/: routing_engine.hpp  server.hpp
scripts/: build.sh  compare_modes.py  compare_modes_8080.py  debug_edge_selection.py  debug_knn_mismatch.py  debug_knn_mismatch_2.py  debug_knn_optimizations.py  debug_somerset.py  debug_somerset_bidirectional.py  debug_somerset_case2.py  debug_somerset_case3.py  debug_somerset_issue.py  debug_somerset_mode_comparison.py  debug_vancouver.py  restart.sh  run.sh  setup_datasets.sh  stop.sh  test_algorithm_comparison.py  test_new_route.py  test_new_somerset_route.py  test_somerset_coords.py  verify_optimizations.py
src/: main.cpp  routing_engine.cpp  routing_engine.cpp.bak  server.cpp
tests/: test_routing_engine.cpp
